# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  engine_parser.py  files_parser.py
gendiff/formatters/: json_format.py  plain_format.py  stylish_format.py
gendiff/gendiff_func/: dict_parser.py  generate_differece.py
gendiff/scripts/: gendiff.py
tests/: test_generate_differece.py
tests/fixtures/: file1.yaml  file2.yaml
